Aress7/src/objects/Case_Surveys__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_Survey</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Number__c</fullName>
        <label>Session Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Fault Report</label>
    <nameField>
        <displayFormat>FR-{0000}</displayFormat>
        <label>Fault Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fault Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>